[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw_stock_tools"
version = "0.1.0"
description = "台灣股市相關的資料擷取與分析工具集"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.urls]
Repository = "https://github.com/nk7260ynpa/Tw_stock_tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tw_stock_tools" = ["config/*.json"]
